@@ -526,7 +526,7 @@ public:
 	Mob* With();
 
 	// Add item from cursor slot to trade bucket (automatically does bag data too)
-	void AddEntity(uint16 from_slot_id, uint16 trade_slot_id);
+	void AddEntity(uint16 from_slot_id, uint16 trade_slot_id, uint32 stack_size);
 
 	// Audit trade
 	void LogTrade();
